função btn depois funcionando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
-            android:exported="true"></activity>
+            android:name=".LoginActivity">
+        </activity>
+
     </application>
 
 </manifest>
