--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DocVet"
         tools:targetApi="31">
         <activity
-            android:name=".RecuperarSenha"
+            android:name=".RecuperarSenhaActivity"
             android:exported="false" />
         <activity
             android:name=".CadastroActivity"
