--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.DocVet"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
-
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".CadastroVeterinario"
+            android:exported="false" />
+        <activity
+            android:name=".activity_cadastroVeterinario"
+            android:exported="false" />
         <activity
             android:name=".VeterinariosActivity"
             android:exported="false" />
